<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInputList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/tvInputInstrucction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:hint="@string/instruction"
        android:paddingLeft="@dimen/normal_padding"
        android:paddingRight="@dimen/normal_padding"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInputList" />

    <TextView
        android:id="@+id/tvInputMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:hint="@string/message"
        android:paddingLeft="@dimen/normal_padding"
        android:paddingRight="@dimen/normal_padding"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInputInstrucction" />

    <TextView
        android:id="@+id/tvResultList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:hint="@string/result"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInputMessage" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultList" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/normal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResultList">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- List -->
            <TextView
                android:id="@+id/tvFilterTitle"
                style="@style/HeaderTitle"
                android:text="@string/list_filters"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/btFilterByPredicate"
                style="@style/actionButtonStyle"
                android:text="@string/filter_by_predicate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvFilterTitle" />

            <Button
                android:id="@+id/btFilterIndexed"
                style="@style/actionButtonStyle"
                android:layout_marginStart="@dimen/small_margin"
                android:text="@string/filter_indexed"
                app:layout_constraintBaseline_toBaselineOf="@+id/btFilterByPredicate"
                app:layout_constraintStart_toEndOf="@+id/btFilterByPredicate" />

            <Button
                android:id="@+id/btFilterNot"
                style="@style/actionButtonStyle"
                android:text="@string/filter_not"
                app:layout_constraintStart_toStartOf="@+id/btFilterByPredicate"
                app:layout_constraintTop_toBottomOf="@+id/btFilterIndexed" />

            <Button
                android:id="@+id/btFilterInstance"
                style="@style/actionButtonStyle"
                android:text="@string/filter_instance"
                app:layout_constraintBaseline_toBaselineOf="@+id/btFilterNot"
                app:layout_constraintStart_toEndOf="@+id/btFilterNot" />

            <Button
                android:id="@+id/btFilterNotNull"
                style="@style/actionButtonStyle"
                android:text="@string/filter_not_empty"
                app:layout_constraintStart_toStartOf="@+id/btFilterNot"
                app:layout_constraintTop_toBottomOf="@+id/btFilterNot" />

            <Button
                android:id="@+id/btPartitioning"
                style="@style/actionButtonStyle"
                android:text="@string/partitioning"
                app:layout_constraintBaseline_toBaselineOf="@+id/btFilterNotNull"
                app:layout_constraintStart_toEndOf="@+id/btFilterNotNull" />

            <!-- Testing predicates -->
            <TextView
                android:id="@+id/tvTestingPredicates"
                style="@style/HeaderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/testing_predicate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btPartitioning" />

            <Button
                android:id="@+id/btAny"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/any"
                android:textSize="@dimen/button_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTestingPredicates" />

            <Button
                android:id="@+id/btNone"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/none"
                android:textSize="@dimen/button_size"
                app:layout_constraintBaseline_toBaselineOf="@+id/btAny"
                app:layout_constraintStart_toEndOf="@+id/btAny" />

            <Button
                android:id="@+id/btAll"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/all"
                android:textSize="@dimen/button_size"
                app:layout_constraintBaseline_toBaselineOf="@+id/btNone"
                app:layout_constraintStart_toEndOf="@+id/btNone" />


            <!-- Map -->
            <TextView
                android:id="@+id/tvMapFiltersTitle"
                style="@style/HeaderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/filter_maps"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btAll" />


            <Button
                android:id="@+id/btMapFilterByPredicate"
                style="@style/actionButtonStyle"
                android:text="@string/filter_by_predicate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMapFiltersTitle" />

            <Button
                android:id="@+id/btMapFilterByKey"
                style="@style/actionButtonStyle"
                android:text="@string/filter_by_key"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btMapFilterByPredicate" />

            <Button
                android:id="@+id/btMapFilterByValue"
                style="@style/actionButtonStyle"
                android:text="@string/filter_by_value"
                app:layout_constraintBaseline_toBaselineOf="@+id/btMapFilterByKey"
                app:layout_constraintStart_toEndOf="@+id/btMapFilterByKey" />


            <!-- Sorting -->
            <TextView
                android:id="@+id/tvSortingTitle"
                style="@style/HeaderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/sorting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btMapFilterByValue" />

            <Button
                android:id="@+id/btNaturalSort"
                style="@style/actionButtonStyle"
                android:text="@string/natural_sort"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSortingTitle" />

            <Button
                android:id="@+id/btCustomSort"
                style="@style/actionButtonStyle"
                android:text="@string/custom_sorting"
                app:layout_constraintBaseline_toBaselineOf="@+id/btNaturalSort"
                app:layout_constraintStart_toEndOf="@+id/btNaturalSort" />

            <Button
                android:id="@+id/btReverse"
                style="@style/actionButtonStyle"
                android:text="@string/reverse_sorting"
                app:layout_constraintBaseline_toBaselineOf="@+id/btCustomSort"
                app:layout_constraintStart_toEndOf="@+id/btCustomSort" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>